--- a/Map/index.html
+++ b/Map/index.html
@@ -22,6 +22,8 @@
 
   <!-- API key -->
   <script type="text/javascript" src="config.js"></script>
+  <!--D3-->
+  <script src="https://d3js.org/d3.v5.min.js"></script>
   <!-- JS -->
   <script type="text/javascript" src="logic.js"></script>
 </body>
