--- a/Map/index.html
+++ b/Map/index.html
@@ -25,6 +25,7 @@
   <!--D3-->
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <!-- JS -->
-  <script type="text/javascript" src="logic.js"></script>
+  <!-- <script type="text/javascript" src="logic.js"></script> -->
+  <script type="text/javascript" src="logic1.js"></script>
 </body>
 </html>
